komp-smb/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: backend
    spec:
      containers:
#        - image: btrurqnt/backend:v1.1
         - image: backend:v1.1
           name: backend
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8092
            initialDelaySeconds: 60
            failureThreshold: 5
            periodSeconds: 10
          ports:
            - containerPort: 8092
              protocol: TCP
      restartPolicy: Always
