komp-smb/pgadmin4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pgadmin4
  name: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin4
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: pgadmin4
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: pg@pg.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: password
          image: dpage/pgadmin4
          name: pgadmin
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-data-monolithe
      restartPolicy: Always
      volumes:
        - name: pgadmin-data-monolithe
          persistentVolumeClaim:
            claimName: pgadmin-data-monolithe
