komp-smb/sma-monolithe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: sma-monolithe
  name: sma-monolithe
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sma-monolithe
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: sma-monolithe
    spec:
      containers:
        - image: btrurqnt/sma-monolithe:v1.1
#        - image: sma-monolithe:v1.1
          name: sma-monolithe
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8092
            initialDelaySeconds: 60
            failureThreshold: 5
            periodSeconds: 10
          ports:
            - containerPort: 8092
              protocol: TCP
      restartPolicy: Always
