komp-smb/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: backend
  name: backend
spec:
#  type: LoadBalancer
  ports:
    - name: "8092"
      port: 8092
      targetPort: 8092
  selector:
    io.kompose.service: backend
