komp-smb/pgadmin4-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pgadmin4
  name: pgadmin4
spec:
  type: NodePort
  ports:
    - name: "6002"
      port: 6002
      targetPort: 80
  selector:
    io.kompose.service: pgadmin4
