komp-smb/postgres-monolithe-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: postgres-monolithe
  name: postgres-monolithe
spec:
  ports:
    - name: "50006"
      port: 50006
      targetPort: 50006
  selector:
    io.kompose.service: postgres-monolithe
