komp-smb/sma-monolithe-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: sma-monolithe
  name: sma-monolithe
spec:
  ports:
    - name: "8092"
      port: 8092
      targetPort: 8092
  selector:
    io.kompose.service: sma-monolithe
