komp-smb/thymeleaf-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: thymeleaf-frontend
  name: thymeleaf-frontend
#  namespace: smb
spec:
  type: NodePort
  ports:
    - name: "8094"
      port: 8094
      targetPort: 8094
  selector:
    io.kompose.service: thymeleaf-frontend
